update oapi.yaml
